# mlx-lattice

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  prek.toml  pyproject.toml
benchmarks/: README.md  bench_sparse_ops.py  pyproject.toml
benchmarks/mlx_lattice_bench/: __main__.py  catalog.py  console.py  datasets.py  devices.py  harness.py  report.py  run.py
benchmarks/mlx_lattice_bench/cases/: __init__.py  common.py  conv.py  coords.py  feature.py  pool.py  quantization.py  relations.py  tensor.py  workloads.py
contract/: pyproject.toml
contract/lattice_contract/: __init__.py  manifest.py  ops.py
docs/: conf.py  index.rst
native/: CMakeLists.txt  bindings.cpp
native/backends/: CMakeLists.txt  gpu.cpp
native/backends/cpu/: CMakeLists.txt  conv3d.cpp  conv3d.h  conv3d_backward.cpp  conv3d_forward.cpp  conv3d_pool.cpp  coords.cpp  coords.h  point.cpp  point.h
native/backends/cpu/conv/: algorithms.cpp  algorithms.h
native/backends/cpu/coords/: algorithms.cpp  algorithms.h
native/backends/cpu/exec/: algorithms.cpp  algorithms.h  planning.cpp  planning.h
native/backends/cpu/pool/: algorithms.cpp
native/backends/cuda/: CMakeLists.txt  conv3d.cu  conv3d_kernels.cuh  coords.cu  launch_utils.cuh  runtime_api.h  runtime_utils.cu  runtime_utils.h  stub.cpp
native/backends/cuda/conv/: kernels.cu  kernels.cuh  runtime.cpp  runtime.cu
native/backends/cuda/coords/: kernels.cu  kernels.cuh  runtime.cpp  runtime.cu  runtime.h
native/backends/cuda/pool/: kernels.cu  kernels.cuh  runtime.cpp  runtime.cu
native/backends/metal/: CMakeLists.txt  conv3d.cpp  conv3d.h  conv3d.metal  conv3d_backward.cpp  conv3d_common.h  conv3d_forward.cpp  conv3d_pool.cpp  coords.cpp  coords.h  coords.metal  runtime_utils.h  stub.cpp
native/backends/metal/conv/: dense_kernels.metal  kernels.metal  runtime.cpp  runtime.h
native/backends/metal/coords/: common.metal  kernels.metal  occupancy.metal  quantization.metal  runtime.cpp  runtime.h  set.metal
native/backends/metal/exec/: common.metal  kernels.metal  runtime.cpp  runtime.h
native/backends/metal/pool/: runtime.cpp
native/backends/metal/tensor_ops/: capabilities.cpp  capabilities.h
native/backends/metal/tensor_ops/conv/forward/: contract.metal  runtime.cpp
native/backends/metal/tensor_ops/conv/input_grad/: runtime.cpp
native/backends/metal/tensor_ops/conv/weight_grad/: contract.metal  reduce.metal  runtime.cpp  runtime.h
native/bindings/: CMakeLists.txt  convolution.cpp  coords.cpp  entropy.cpp  exec.cpp  module.cpp  pooling.cpp  registrations.h  runtime.cpp
native/features/: CMakeLists.txt
native/features/convolution/: CMakeLists.txt  api.cpp  api.h  contract.h  factories.h  primitive.cpp  quantized.cpp  streams.cpp  streams.h
native/features/convolution/cpu/: algorithms.cpp  algorithms.h  quantized.cpp
native/features/convolution/metal/: common.metal  forward.metal  input_grad.metal  quantized_runtime.cpp  runtime.cpp  runtime.h  sorted_igemm.metal  specialized_forward.metal  specialized_input_grad.metal  specialized_weight_grad.metal  stub.cpp  weight_grad.metal
native/features/convolution/metal/direct/: dense_forward.metal  dense_input_grad.metal  dense_weight_grad.metal  forward.metal  input_grad.metal  quantized_forward.metal  quantized_runtime.cpp  quantized_runtime.h  specialized_forward.metal  specialized_input_grad.metal  specialized_weight_grad.metal  vector_io.metal  weight_grad.metal
native/features/convolution/metal/sorted_igemm/: quantized_contract.metal  quantized_runtime.cpp  quantized_runtime.h
native/features/convolution/metal/tensor_ops/input_grad/: contract.metal  runtime.cpp  runtime.h
native/features/convolution/metal/tensor_ops/quantized_forward/: runtime.cpp  runtime.h
native/features/coordinates/: CMakeLists.txt  api.cpp  api.h  factories.h  lookup.cpp  neighbors.cpp  occupancy.cpp  offsets.cpp  ordering.cpp  quantization.cpp  relations.cpp  set.cpp  streams.cpp  streams.h  types.h  validation.cpp  validation.h
native/features/coordinates/cpu/: algorithm_details.h  algorithms.h  common_detail.h  neighbor_algorithms.cpp  occupancy_algorithms.cpp  quantization_algorithms.cpp  quantization_detail.h  relation_algorithms.cpp  relation_build_detail.h  relation_views_detail.h  set_algorithms.cpp  set_neighbors_detail.h
native/features/coordinates/metal/: common.metal  hash.metal  neighbor_kernels.metal  neighbors_runtime.cpp  occupancy.metal  occupancy_runtime.cpp  ordering.metal  ordering_runtime.cpp  quantization.metal  quantization_runtime.cpp  relation_kernels.metal  relations_runtime.cpp  runtime.h  runtime_detail.h  set.metal  set_runtime.cpp  stub.cpp
native/features/entropy/: CMakeLists.txt  api.cpp  api.h  range.cpp
native/features/pooling/: CMakeLists.txt  api.cpp  api.h  contract.h  factories.h  primitive.cpp  streams.cpp  streams.h  validation.cpp  validation.h
native/features/pooling/cpu/: algorithms.cpp  algorithms.h
native/features/pooling/metal/: autodiff.metal  forward.metal  runtime.cpp  runtime.h  stub.cpp
native/foundation/: CMakeLists.txt  array_utils.h  primitive.h  runtime.cpp  runtime.h  sparse_relation.h
native/kernels/: stub.metal
native/lattice/: CMakeLists.txt  runtime.cpp  runtime.h
native/ops/: CMakeLists.txt  conv3d.cpp  conv3d.h  coords.cpp  coords.h  entropy.h  exec.h  point.cpp  point.h
native/ops/conv3d/: dispatch.cpp  dispatch.h  primitives.cpp  primitives.h  validation.cpp  validation.h
native/ops/coords/: CMakeLists.txt  api.cpp  dispatch.cpp  dispatch.h  factories.h  lookup.cpp  maps.cpp  neighbors.cpp  occupancy.cpp  ordering.cpp  quantization.cpp  relations.cpp  set.cpp  types.h  validation.cpp  validation.h
native/ops/entropy/: CMakeLists.txt  api.cpp  factories.h  range.cpp
native/ops/exec/: CMakeLists.txt  api.cpp  conv.cpp  dispatch.cpp  dispatch.h  factories.h  pool.cpp  streams.cpp  streams.h  types.h  validation.cpp  validation.h
native/platform/: CMakeLists.txt
native/platform/cpu/: schedule.h
native/platform/metal/: capabilities.cpp  capabilities.h  runtime_utils.cpp
(+177 files in other folders)
