[project]
name = "mlx-lattice"
version = "0.1.9"
description = "Sparse point cloud convolution library for MLX"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["optional-dependencies"]
authors = [{ name = "Yu", email = "i@letter.cafe" }]
dependencies = [
  "mlx>=0.31; platform_system == 'Darwin'",
  "mlx[cpu]>=0.31; platform_system == 'Linux'",
]

[project.urls]
Homepage = "https://github.com/utakotoba/mlx-lattice"
Repository = "https://github.com/utakotoba/mlx-lattice.git"
Issues = "https://github.com/utakotoba/mlx-lattice/issues"
Changelog = "https://github.com/utakotoba/mlx-lattice/releases"

[build-system]
requires = [
  "scikit-build-core>=0.12",
  "nanobind>=2",
  "mlx>=0.31; platform_system == 'Darwin'",
  "mlx[cpu]>=0.31; platform_system == 'Linux'",
]
build-backend = "scikit_build_core.build"

[dependency-groups]
cuda-build = ["mlx[cuda13]>=0.31; platform_system == 'Linux'"]
dev = [
  "cmake>=3.27",
  "nanobind>=2",
  "ninja>=1.11",
  "pytest>=8",
  "ruff>=0.15.15",
  "scikit-build-core>=0.12",
  "ty>=0.0.40",
  "wheel>=0.45",
]

[tool.uv.sources]
mlx-lattice-cuda13 = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.scikit-build]
minimum-version = "0.12"
build-dir = "build/{wheel_tag}"
wheel.packages = ["mlx_lattice"]
wheel.platlib = true
sdist.include = [
  "CMakeLists.txt",
  "CMakePresets.json",
  "mlx_lattice/**",
  "native/**",
  "packages/*/**",
  "scripts/**",
]
sdist.exclude = [
  ".DS_Store",
  ".ruff_cache/**",
  "build/**",
  "dist/**",
  "references/**",
  "**/.DS_Store",
  "**/*.py[cod]",
  "**/__pycache__",
  "**/__pycache__/**",
  "mlx_lattice/**/__pycache__",
  "mlx_lattice/**/__pycache__/**",
  "packages/**/__pycache__",
  "packages/**/__pycache__/**",
  "tests/**/__pycache__",
  "tests/**/__pycache__/**",
]

[tool.scikit-build.editable]
rebuild = true

[tool.scikit-build.metadata.optional-dependencies]
provider = "scikit_build_core.metadata.template"
result = { cuda = [
  "mlx[cuda13]>=0.31; platform_system == 'Linux'",
  "mlx-lattice-cuda13=={project[version]}; platform_system == 'Linux'",
], cuda13 = [
  "mlx[cuda13]>=0.31; platform_system == 'Linux'",
  "mlx-lattice-cuda13=={project[version]}; platform_system == 'Linux'",
] }

[tool.ruff]
line-length = 76
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
