# MARK: - metadata
[project]
name = "mlx-lattice"
version = "0.2.0"
description = "Sparse point cloud convolution library for MLX"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Z.Y. Lin", email = "i@letter.cafe" }]
keywords = ["mlx", "ml", "sparse", "convolution", "point-cloud"]
dependencies = ["mlx>=0.31"]

[project.urls]
Homepage = "https://github.com/utakotoba/mlx-lattice"
Repository = "https://github.com/utakotoba/mlx-lattice.git"
Issues = "https://github.com/utakotoba/mlx-lattice/issues"
Changelog = "https://github.com/utakotoba/mlx-lattice/releases"

[build-system]
requires = ["scikit-build-core>=0.12", "nanobind>=2", "mlx>=0.31"]
build-backend = "scikit_build_core.build"

# MARK: - deps

[tool.uv.workspace]
members = ["benchmarks"]

[dependency-groups]
dev = ["nanobind>=2", "prek>=0.4.3", "pytest>=8", "ruff>=0.15.15", "ty>=0.0.42"]

# MARK: - build

[tool.scikit-build]
minimum-version = "0.12"
build-dir = "build/{state}-{wheel_tag}"
wheel.packages = ["mlx_lattice"]
sdist.include = [
  "CMakeLists.txt",
  "CMakePresets.json",
  "mlx_lattice/**/*.py",
  "mlx_lattice/py.typed",
  "native/**",
  "tests/**/*.py",
]
sdist.exclude = [
  ".DS_Store",
  ".ruff_cache/**",
  ".pytest_cache/**",
  "build/**",
  "dist/**",
  "**/.DS_Store",
  "**/*.pyc",
  "**/*.pyo",
  "**/__pycache__",
  "**/__pycache__/**",
  "mlx_lattice/**/__pycache__",
  "mlx_lattice/**/__pycache__/**",
]

[tool.scikit-build.editable]
rebuild = true
verbose = false

# MARK: - fmt + lint

[tool.ruff]
line-length = 76
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.ty.environment]
extra-paths = ["benchmarks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
