[project]
name = "mlx-lattice-bench"
version = "0.2.0"
description = "Benchmark suite for mlx-lattice public sparse operators"
requires-python = ">=3.12"
dependencies = ["mlx-lattice"]

[project.scripts]
mlx-lattice-bench = "mlx_lattice_bench.run:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.uv.sources]
mlx-lattice = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["mlx_lattice_bench"]

[tool.ruff]
line-length = 76
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
