[project]
name = "lattice-contract"
version = "0.1.0"
description = "Backend-neutral sparse lattice artifact contract"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Z.Y. Lin", email = "me@iki.moe" }]
keywords = ["sparse", "lattice", "ir", "model-artifact"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lattice_contract"]

[tool.ruff]
line-length = 76
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
